feat: add send mail functionality
